# logmore

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  main.cpp
.github/workflows/: cmake.yml
cmake/: project_settings.cmake
docs/: Learnings.md
include/: CMakeLists.txt
include/logmore/: application.cpp  application.hpp  config.hpp  controller.cpp  controller.hpp  file_handler.cpp  file_handler.hpp  keys.hpp  parser.cpp  parser.hpp  terminal.cpp  terminal.hpp  terminal_handler.cpp  terminal_handler.hpp  types.hpp
scripts/: dummy_logger.py
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  controller_test.cpp  hello_test.cpp  parser_test.cpp
